# generate-transcript

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.bat  transcribe.bat  transcribe.py  transcribe.sh
