[project]
name = "generate-transcript"
version = "0.1.0"
description = ""
authors = [
    {name = "EZ"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-whisper (>=20250625,<20250626)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
